<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/confirmOfferConstraintLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/confirmOfferTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_offer_label"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/confirmOfferText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@string/dynamic_text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/confirmOfferButton"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_label" />

        <Button
            android:id="@+id/cancelOfferButton"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_label"
            android:backgroundTint="@color/red_error"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>